Adjust z-index of fixed header on scroll

--- a/themes/unsichtbar/assets/scss/_header.scss
+++ b/themes/unsichtbar/assets/scss/_header.scss
@@ -1,9 +1,9 @@
 #main-header {
+  z-index: 3;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0;
-  border-bottom: 2px solid var(--light-blue);
   height: 5rem;
   transition: height 450ms;
 
